objects/ASI_CRM_RSPHeader__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_Branch__c</fullName>
        <label>Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>RSP Header</relationshipLabel>
        <relationshipName>RSP_Header</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FxMonth__c</fullName>
        <formula>TEXT(MONTH( ASI_CRM_Date__c ))</formula>
        <label>Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_FxYear__c</fullName>
        <formula>TEXT(YEAR( ASI_CRM_Date__c ))</formula>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TotalFacing__c</fullName>
        <label>Total Facing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>RSP Header</label>
    <listViews>
        <fullName>All_MY_RSP_Header</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_Customer__c</columns>
        <columns>ASI_CRM_Date__c</columns>
        <columns>ASI_CRM_Remark__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_CRM_RSPHeader__c.ASI_CRM_MY_RSPHeader</value>
        </filters>
        <label>All MY RSP Header</label>
        <language>en_GB</language>
        <sharedTo>
            <group>ASI_CRM_MY_PowerUser</group>
            <group>ASI_CRM_MY_StandardUser</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>RH-{00000000}</displayFormat>
        <label>RSP Header ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSP Header</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_RSPHeader</fullName>
        <active>true</active>
        <label>ASI CRM MY RSPHeader</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>